--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoTurnos
 endorsed.classpath=
 excludes=
+file.reference.jxl-2.6.jar=src\\jxl-2.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jxl-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
